Max-wdith on images to prevent controls from overflowing and hiding.

--- a/scss/stanford_media.scss
+++ b/scss/stanford_media.scss
@@ -4,3 +4,10 @@
     text-align: right;
   }
 }
+
+.cke_editable {
+  img,
+  picture {
+    max-width: 100%;
+  }
+}
